# synthforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ecommerce_catalog.py  financial_data.py  hr_dataset.py  sensor_data.py
synthforge/: __init__.py  cli.py  config.py  forge.py  metadata.py
synthforge/constraints/: __init__.py
synthforge/evaluation/: __init__.py
synthforge/llm/: __init__.py  client.py  mnpi_detector.py  pii_detector.py  schema_enricher.py  validator.py
synthforge/strategies/: __init__.py
synthforge/synthesizers/: __init__.py  ctgan.py  gaussian_copula.py  great.py  tabddpm.py  tabsyn.py  tvae.py
synthforge/transforms/: __init__.py
tests/: test_core.py
tests/fixtures/: sample_employees.csv
