[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthforge"
version = "0.1.0"
description = "Next-generation synthetic data generation library with LLM-augmented pipelines"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "SynthForge Team"}
]
keywords = ["synthetic-data", "privacy", "tabular", "machine-learning", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<2.1",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "pydantic>=2.0",
    "tqdm>=4.65",
    "faker>=20.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
gan = [
    "torch>=2.1",
]
diffusion = [
    "torch>=2.1",
]
great = [
    "torch>=2.1",
    "transformers>=4.35",
]
llm = [
    "litellm>=1.40",
]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
evaluation = [
    "sdmetrics>=0.14",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]
all = [
    "synthforge[gan,diffusion,great,llm,presidio,evaluation]",
]
dev = [
    "synthforge[all]",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
synthforge = "synthforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["synthforge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
